# rust-conduct-conformulator

./: .travis.yml  Cargo.toml  Dockerfile  README.md  config.toml.example
assets/css/: style.css
deployment/: README.md  config.toml.secure  conformulator.service  instance-init  nginx.conf
src/: lib.rs  main.rs
templates/: index.html.tera
tests/: validation_tests.rs
