[package]
name = "code_of_conduct_conformulator"
version = "0.1.0"
authors = ["David Alber <alber.david@gmail.com>"]

[dependencies]
config = "0.8.0"
lazy_static = "1.0.0"
rayon = "1.0.1"
reqwest = "0.8.4"
rocket = "0.3.13"
rocket_codegen = "0.3.13"
serde = "1.0.53"
serde_derive = "1.0.53"
serde_json = "1.0.17"

[dependencies.rocket_contrib]
version = "0.3.13"
default-features = false
features = ["tera_templates", "json"]
