[package]
name = "code_of_conduct_conformulator"
version = "0.1.0"
authors = ["David Alber <alber.david@gmail.com>"]

[dependencies]
config = "0.8.0"
lazy_static = "1.0.0"
rayon = "1.0.1"
reqwest = "0.8.4"
rocket = "0.4.0"
serde = "1.0.53"
serde_derive = "1.0.53"
serde_json = "1.0.17"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json", "tera_templates"]
